# mpr

./: .gitignore
cuda-1/: docs.md
cuda-1/ex1_vector_addition_gpu/: add_vector_gpu.bat  add_vector_gpu_2.cu  plot.py
cuda-1/ex2_matrix_transpose_gpu/: gputimer.h
cuda-2/: cuda_2.ipynb
cuda-2/1 Reduction/: analyser.bat  profiler.bat  reduction_global_gpu.bat  reduction_shared.cpp
cuda-2/5 Histogram/: histo.cu
cuda-2/atomic-operations/: reduction.h
cuda-2/loop-unrolling/: reduction.cpp
cuda-2/reduction/: profiler.bat  reduction_global.cpp  reduction_global_gpu.bat  reduction_shared_kernel.cu
cuda-2/warp-divergence/: reduction.cpp
cuda-3/resources/cublas_version/: cublasSgemm.cpp
cuda/ex1_vector_addition_gpu/: add_vector_gpu.cu  add_vector_gpu_2.cu
cuda/ex2_matrix_transpose_gpu/: conflict_solved.cu  matrix_transpose.bat  matrix_transpose.cu  plot.py
howtos/: build-and-run.md  login.md  run-on-ares.md
lab-01/playground/src/: main.c  (+4 more)
lab-02/: docs.md
mapreduce/: compile-rust.sh  docs.md  prepare-node.sh  run-mapreduce.sh  run-seq.sh
mapreduce/data-mock/: data-10GB.txt  data-1GB.txt
mapreduce/python/: mapper.py  plots.py  reducer.py
mapreduce/results-final/: result-23-05-22-17-29-09.txt
openmp/: CMakeLists.txt  docs.md  notes.md
openmp/src/: compile-ares.sh  main  main.c  makefile  plot-draw-exp.py  plot.py  prepare-exp.sh  prng.cpp  run-ares.sh  run-draw-exp.sh  run-prng.sh  run.sh  sort.c  sort.cpp
openmp/src/plots/: __init__.py  cmp.py  commons.py  config.py  par.py  prng.py  seq.py
openmpi-1/: docs.md
template/src/: main.c
(+24 files in other folders)
